err/nzmath.err
Listing '.'...
Listing './bin'...
Listing './doc'...
Listing './doc/NZMATH-1.1.0'...
Listing './doc/NZMATH-1.1.0/manual'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/NZMATH-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/nzmath'...
Compiling './lib/python3.5/site-packages/nzmath/combinatorial.py'...
***   File "./lib/python3.5/site-packages/nzmath/combinatorial.py", line 402
    print self.partition
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nzmath/config'...
Listing './lib/python3.5/site-packages/nzmath/factor'...
Compiling './lib/python3.5/site-packages/nzmath/intresidue.py'...
***   File "./lib/python3.5/site-packages/nzmath/intresidue.py", line 50
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nzmath/module.py'...
***   File "./lib/python3.5/site-packages/nzmath/module.py", line 479
    raise ValueError, "only support non-negative powering"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nzmath/permute.py'...
***   File "./lib/python3.5/site-packages/nzmath/permute.py", line 131
    raise TypeError, "Invalid length"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nzmath/plugin'...
Listing './lib/python3.5/site-packages/nzmath/plugin/math'...
Listing './lib/python3.5/site-packages/nzmath/poly'...
Compiling './lib/python3.5/site-packages/nzmath/ring.py'...
***   File "./lib/python3.5/site-packages/nzmath/ring.py", line 309
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './nzmath'...
Listing './share'...
Listing './share/python-wheels'...
